<resources>
    <string name="app_name">EvangelizarApp</string>

    <string name="title_activity_lista_cadastro">Lista Cadastro</string>
    <string name="action_lista_cadastro_sincronizar">Sincronizar</string>
    <string name="button_lista_cadastro_novo">Novo</string>

    <string name="title_activity_cadastro">Pessoa</string>
    <string name="label_cadastro_nome">Nome:</string>
    <string name="label_cadastro_bairro">Bairro:</string>
    <string name="label_cadastro_endereco">Endereço:</string>
    <string name="label_cadastro_telefone">Telefone:</string>
    <string name="label_cadastro_facebook">Facebook:</string>
    <string name="label_cadastro_email">E-mail:</string>
    <string name="label_cadastro_idade">Idade:</string>
    <string name="button_cadastro_salvar">Salvar</string>
    <string name="label_cadastro_local">Local:</string>

    <string name="title_activity_evangelizador">Evangelizador</string>
    <string name="label_evangelizador_nome">Nome:</string>
    <string name="label_evangelizador_tipo">Tipo:</string>
    <string name="label_evangelizador_telefone">Telefone:</string>
    <string name="label_evangelizador_email">E-mail:</string>
    <string name="label_evangelizador_evento">Evento:</string>
    <string name="button_evangelizador_salvar">Salvar</string>

    <string-array name="tipo">
        <item></item>
        <item>Obra</item>
        <item>Vocacionado(a)</item>
        <item>P1</item>
        <item>P2</item>
        <item>D1</item>
        <item>D2</item>
        <item>Consagrado(a)</item>
    </string-array>

    <string-array name="evento">
        <item></item>
        <item>Halleluya</item>
        <item>Lanchonete</item>
        <item>Noite de louvor</item>
        <item>Reviver</item>
        <item>Outro</item>
    </string-array>

    <string-array name="local_shalom">
        <item></item>
        <item>Catete</item>
        <item>Recreio</item>
        <item>Santa Cruz</item>
        <item>Vigário</item>
    </string-array>

</resources>
